bug: fixes the input height on mobile devices

--- a/css/base/responsiveness.css
+++ b/css/base/responsiveness.css
@@ -10,14 +10,21 @@
 }
 
 @media (max-width: 599px) {
+  .wrapper {
+    grid-template-rows: 200px auto 50px;
+  }
+
   h1 {
     font-family: "Caveat", cursive;
     font-size: 2.3rem;
-    margin-bottom: 2.3rem;
   }
 
   input {
     width: 70%;
+  }
+
+  main {
+    padding: 1rem 1.5rem;
   }
 
   main div {
@@ -32,6 +39,6 @@
   }
 
   span {
-    bottom: 125px;
+    bottom: 68px;
   }
 }
