--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 input {
-  height: 4rem;
+  height: 3rem;
   padding: 0 1rem;
   width: 45%;
   background: linear-gradient(135deg, hsl(0, 100%, 98%), hsl(0, 70%, 85%));
@@ -40,16 +40,18 @@ span {
 }
 
 header button {
-  background-color: #fff;
-  height: 4rem;
+  background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+  height: 3rem;
   padding: 0.5rem 1.5rem;
-  border: 2px solid #413a3a91;
+  border: 1px solid #413a3a91;
   box-shadow: 10px 8px 9px #413a3a91;
   border-radius: 5px;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
+  border-left: none;
 }
 
 header button:hover {
-  background: linear-gradient(135deg, hsl(0, 100%, 98%), hsl(0, 70%, 85%));
+  background: #fff;
+  border-left: 1px solid #413a3a91;
 }
